--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>football assignment</title>
+	<script src="https://kit.fontawesome.com/fc0c160a5e.js" crossorigin="anonymous"></script>
 	<style>
 		@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 		</style>
@@ -150,7 +151,7 @@
 						<h1>All Highlights 
 							Copa America 2021</h1>
 						<p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p><br>
-						<button>watch now</button>	
+						<button>watch now<i class="fas fa-long-arrow-alt-right"></i></button>	
 					</div>
 					<div class="match">
 						<img src="images/match.png" alt="">
@@ -158,6 +159,24 @@
 				</div>
 			</div>
 
+		</section>
+		<section class="top-logo">
+			<div class="logos">
+				<div class="logo">
+					<img src="images/Logo.png" alt="">
+				</div>
+				<div class="tittle">
+					<span>
+						<i class="fab fa-instagram"></i>
+						<i class="fab fa-facebook-f"></i>
+						<i class="fab fa-twitter-square"></i>
+						<i class="fab fa-youtube"></i>
+					</span>
+				</div>
+				<footer>
+					<p>copyright <a href=""><i class="fas fa-copyright"></i></a>2022 football</p>
+				</footer>
+			</div>
 		</section>
 	</main>
 </body>
