--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<img src="images/players/player-1.png" alt="">
 					</div>
 					<div class="player-details">
-						<h3 class="player-name">philippe coutinho</h3>
+						<h3 class="player-name">neymar jr</h3>
 						<p class="player-info">Soccerment provides you with smart football statistics and data visualisation, as well as detailed football analyses and football rankings from competitions all over the world. Our live, in-depth football stats from the Premier League, La Liga, Serie A, Bundesliga, Ligue 1,</p>
 					</div>
 
@@ -37,7 +37,7 @@
 						<img src="images/players/player-2.png" alt="">
 					</div>
 					<div class="player-details">
-						<h3 class="player-name">philippe coutinho</h3>
+						<h3 class="player-name">lieonel messi</h3>
 						<p class="player-info">Soccerment provides you with smart football statistics and data visualisation, as well as detailed football analyses and football rankings from competitions all over the world. Our live, in-depth football stats from the Premier League, La Liga, Serie A, Bundesliga, Ligue 1,</p>
 					</div>
 
@@ -47,7 +47,7 @@
 						<img src="images/players/player-3.png" alt="">
 					</div>
 					<div class="player-details">
-						<h3 class="player-name">philippe coutinho</h3>
+						<h3 class="player-name">cristreno rolando</h3>
 						<p class="player-info">Soccerment provides you with smart football statistics and data visualisation, as well as detailed football analyses and football rankings from competitions all over the world. Our live, in-depth football stats from the Premier League, La Liga, Serie A, Bundesliga, Ligue 1,</p>
 					</div>
 
@@ -57,7 +57,7 @@
 						<img src="images/players/player-4.png" alt="">
 					</div>
 					<div class="player-details">
-						<h3 class="player-name">philippe coutinho</h3>
+						<h3 class="player-name">paulo dybala</h3>
 						<p class="player-info">Soccerment provides you with smart football statistics and data visualisation, as well as detailed football analyses and football rankings from competitions all over the world. Our live, in-depth football stats from the Premier League, La Liga, Serie A, Bundesliga, Ligue 1,</p>
 					</div>
 
@@ -67,7 +67,7 @@
 						<img src="images/players/player-5.png" alt="">
 					</div>
 					<div class="player-details">
-						<h3 class="player-name">philippe coutinho</h3>
+						<h3 class="player-name">mesut ozil</h3>
 						<p class="player-info">Soccerment provides you with smart football statistics and data visualisation, as well as detailed football analyses and football rankings from competitions all over the world. Our live, in-depth football stats from the Premier League, La Liga, Serie A, Bundesliga, Ligue 1,</p>
 					</div>
 
@@ -77,7 +77,7 @@
 						<img src="images/players/player-6.png" alt="">
 					</div>
 					<div class="player-details">
-						<h3 class="player-name">philippe coutinho</h3>
+						<h3 class="player-name">mauro lcardi</h3>
 						<p class="player-info">Soccerment provides you with smart football statistics and data visualisation, as well as detailed football analyses and football rankings from competitions all over the world. Our live, in-depth football stats from the Premier League, La Liga, Serie A, Bundesliga, Ligue 1,</p>
 					</div>
 
@@ -87,7 +87,7 @@
 						<img src="images/players/player-7.png" alt="">
 					</div>
 					<div class="player-details">
-						<h3 class="player-name">philippe coutinho</h3>
+						<h3 class="player-name">di maria</h3>
 						<p class="player-info">Soccerment provides you with smart football statistics and data visualisation, as well as detailed football analyses and football rankings from competitions all over the world. Our live, in-depth football stats from the Premier League, La Liga, Serie A, Bundesliga, Ligue 1,</p>
 					</div>
 
@@ -97,7 +97,7 @@
 						<img src="images/players/player-8.png" alt="">
 					</div>
 					<div class="player-details">
-						<h3 class="player-name">philippe coutinho</h3>
+						<h3 class="player-name">kylian mbbapbi</h3>
 						<p class="player-info">Soccerment provides you with smart football statistics and data visualisation, as well as detailed football analyses and football rankings from competitions all over the world. Our live, in-depth football stats from the Premier League, La Liga, Serie A, Bundesliga, Ligue 1,</p>
 					</div>
 
@@ -107,7 +107,7 @@
 						<img src="images/players/player-9.png" alt="">
 					</div>
 					<div class="player-details">
-						<h3 class="player-name">philippe coutinho</h3>
+						<h3 class="player-name">mohammad salah</h3>
 						<p class="player-info">Soccerment provides you with smart football statistics and data visualisation, as well as detailed football analyses and football rankings from competitions all over the world. Our live, in-depth football stats from the Premier League, La Liga, Serie A, Bundesliga, Ligue 1,</p>
 					</div>
 
@@ -117,7 +117,7 @@
 						<img src="images/players/player-10.png" alt="">
 					</div>
 					<div class="player-details">
-						<h3 class="player-name">philippe coutinho</h3>
+						<h3 class="player-name">harry kane</h3>
 						<p class="player-info">Soccerment provides you with smart football statistics and data visualisation, as well as detailed football analyses and football rankings from competitions all over the world. Our live, in-depth football stats from the Premier League, La Liga, Serie A, Bundesliga, Ligue 1,</p>
 					</div>
 
@@ -127,7 +127,7 @@
 						<img src="images/players/player-11.png" alt="">
 					</div>
 					<div class="player-details">
-						<h3 class="player-name">philippe coutinho</h3>
+						<h3 class="player-name">kevin de bruyne</h3>
 						<p class="player-info">Soccerment provides you with smart football statistics and data visualisation, as well as detailed football analyses and football rankings from competitions all over the world. Our live, in-depth football stats from the Premier League, La Liga, Serie A, Bundesliga, Ligue 1,</p>
 					</div>
 
